backend-healthcare/kubernates/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: healthcare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: him1502/api-gateway:v1
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "400m"
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: healthcare
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
