backend-healthcare/kubernates/appointment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
  namespace: healthcare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
        - name: appointment-service
          image: him1502/appointment-service:v1
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
  namespace: healthcare
spec:
  selector:
    app: appointment-service
  ports:
    - port: 8084
      targetPort: 8084
  type: ClusterIP
