backend-healthcare/kubernates/doctor-mysql.yaml

# MySQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor-mysql
  namespace: healthcare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doctor-mysql
  template:
    metadata:
      labels:
        app: doctor-mysql
    spec:
      containers:
        - name: doctor-mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: doctor-mysql-pvc

---

# MySQL Service
apiVersion: v1
kind: Service
metadata:
  name: doctor-mysql
  namespace: healthcare
spec:
  selector:
    app: doctor-mysql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
