backend-healthcare/kubernates/doctor-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor-service
  namespace: healthcare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doctor-service
  template:
    metadata:
      labels:
        app: doctor-service
    spec:
      containers:
        - name: doctor-service
          image: him1502/doctor-service:v1
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: doctor-service
  namespace: healthcare
spec:
  selector:
    app: doctor-service
  ports:
    - name: http
      port: 8082         # Port exposed within cluster
      targetPort: 8082   # Port inside the container
  type: ClusterIP
