backend-healthcare/kubernates/eureka.yaml
# Eureka Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-service
  namespace: healthcare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-service
  template:
    metadata:
      labels:
        app: eureka-service
    spec:
      containers:
        - name: eureka-service
          image: him1502/eureka-server:v1
          ports:
            - containerPort: 8761

---

# Eureka Service (ClusterIP)
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  namespace: healthcare
spec:
  selector:
    app: eureka-service
  ports:
    - port: 8761
      targetPort: 8761
  type: ClusterIP
