backend-healthcare/kubernates/patient-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
  namespace: healthcare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      containers:
        - name: patient-service
          image: him1502/patient-service:v1
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: patient-service
  namespace: healthcare
spec:
  selector:
    app: patient-service
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
